tests/terminate/neg/T1404.1.hs
module Absurd where

{-@ foo :: {False} @-}
foo :: ()
foo = bar

{-@ bar :: {False} @-}
bar :: ()
bar = foo

{-@ oneIsTwo :: {1 == 2} @-}
oneIsTwo :: ()
oneIsTwo = foo
